# scikit-microwave-design

./: README.md  setup.cfg
documentation/package_organization/: To_do.md  extract.md  network.md  plot.md  signals.md  skmd.md  structure.md
documentation/package_organization/.obsidian/: app.json  graph.json  workspace
src/scikit_microwave_design.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/skmd/: Network_Multimode.py  __init__.py  circuit.py  data.py  extract.py  extraction.py  network.py  plot.py  signals.py  structure.py  visualization.py
tests/: Demo_Microstripline.ipynb  L_18pt741.csv  Load_s_parameters_as_NW.py  c_0pt12_l_18pt741.csv  c_0pt25_l_18pt741.csv  c_0pt4_l_18pt741.csv  check_imports.py  check_network.py  interconnect_single_visual.py  microstripline_LPF.py  microstripline_bandgap.py  microstripline_design.py  microstripline_gap_coupled_BPF.py  microstripline_stub_filter.py  transmission_line_testing.py
tests/.ipynb_checkpoints/: Demo_Microstripline-checkpoint.ipynb
